--- a/tests/unittest/Makefile.am
+++ b/tests/unittest/Makefile.am
@@ -1,14 +1,12 @@
-bin_PROGRAMS=\
-	gimliUnitTest
-
-TESTS = unittest.sh
+TESTS = ./unittest.sh
 
 #compile only when make check is called
 check_PROGRAMS=\
 	gimliUnitTest
 
 INCLUDES = \
-        -I $(top_srcdir)/src
+        -I $(top_srcdir)/src \
+		$(CPPUNIT_CFLAGS)
  
 gimliUnitTest_SOURCES = \
 	unittest.sh \
@@ -21,4 +19,9 @@ gimliUnitTest_SOURCES = \
 # 	testGeometry.h \
 # 	testFEM.h 
 
-gimliUnitTest_LDADD = ../../src/.libs/libgimli.la -lcppunit
+if HAVE_UNITTEST
+gimliUnitTest_LDADD = $(top_srcdir)/src/.libs/libgimli.la $(CPPUNIT_LIBS)
+else
+gimliUnitTest_LDADD = 
+endif
+
