win compatibility commit. fix libtool versioning

--- a/configure.ac
+++ b/configure.ac
@@ -3,28 +3,28 @@ AC_PREREQ(2.61)
 
 define([SVNVERSION], esyscmd([sh -c "svnversion -n"]))
 AC_DEFINE(SVN_REVISION, "SVNVERSION", [SVN Revision])
+AC_INIT( [gimli], 0.7.0-SVNVERSION, [carsten@resistivity.net] )
 
 GIMLI_MAJOR_VERSION=0
 GIMLI_MINOR_VERSION=7
 GIMLI_MICRO_VERSION=0
 GIMLI_INTERFACE_AGE=0
 GIMLI_BINARY_AGE=0
+AC_SUBST(GIMLI_MAJOR_VERSION)
 AC_SUBST(GIMLI_MINOR_VERSION)
+AC_SUBST(GIMLI_MICRO_VERSION)
+AC_SUBST(GIMLI_INTERFACE_AGE)
+AC_SUBST(GIMLI_BINARY_AGE)
 
 GIMLI_VERSION=$GIMLI_MAJOR_VERSION.$GIMLI_MINOR_VERSION.$GIMLI_MICRO_VERSION-$SVNVERSION
-AC_INIT( [gimli], 0.7.0-SVNVERSION, [carsten@resistivity.net] )
+AC_SUBST(GIMLI_VERSION)
 AM_INIT_AUTOMAKE( gimli, $GIMLI_VERSION )
 
 # libtool versioning
-#LT_RELEASE=$GIMLI_MAJOR_VERSION.$GIMLI_MINOR_VERSION
-#LT_CURRENT=`expr $GIMLI_MICRO_VERSION - $GIMLI_INTERFACE_AGE`
-#LT_CURRENT=`expr $GIMLI_MICRO_VERSION - 0`
-#LT_REVISION=$GIMLI_INTERFACE_AGE
-#LT_AGE=`expr $GIMLI_BINARY_AGE - $GIMLI_INTERFACE_AGE`
-LT_RELEASE=0
-LT_CURRENT=7
-LT_REVISION=0
-LT_AGE=0
+LT_RELEASE=$GIMLI_MAJOR_VERSION.$GIMLI_MINOR_VERSION
+LT_CURRENT=`expr $GIMLI_MICRO_VERSION - $GIMLI_INTERFACE_AGE`
+LT_REVISION=$GIMLI_INTERFACE_AGE
+LT_AGE=`expr $GIMLI_BINARY_AGE - $GIMLI_INTERFACE_AGE`
 AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
@@ -247,8 +247,6 @@ if test x"$have_unittest" = "xyes"; then
 else
 	AC_MSG_RESULT( cppunit 		[unittest Not INSTALLED])
 fi
-
-
 
 AC_MSG_RESULT()
 AC_MSG_RESULT([Configuration successful! Now type 'make' to build the library, tests, applications and examples])
