--- a/external/Makefile
+++ b/external/Makefile
@@ -4,25 +4,22 @@ TRIANGLE_URL=http://www.netlib.org/voronoi/$(TRIANGLE)
 SUITESPARSE=SuiteSparse-3.6.1.tar.gz
 SUITESPARSE_URL=http://www.cise.ufl.edu/research/sparse/SuiteSparse/$(SUITESPARSE)
 
-
 default: prep triangle suitesparse
 
 prep:
 	mkdir -p lib
 
-$(TRIANGLE):
-	wget -nc -nd $(TRIANGLE_URL)
-	unzip -d triangle $(TRIANGLE)
+$(TRIANGLE): wget unzip
+	#wget -nc -nd $(TRIANGLE_URL)
+	#unzip -o -d triangle $(TRIANGLE)
 
 triangle: prep $(TRIANGLE)
 	echo "building triangle for ", ${OSTYPE}
  
-	if [ $(OSTYPE) == "msys" ]; then \
-		sed -i -e 's/-DLINUX/-DCPU86/g' triangle/makefile && \
-		sed -i -e 's/CC = cc/CC = gcc -fPIC/g' triangle/makefile; \
-	else \
-		sed -i -e 's/CC = cc/CC = gcc -fPIC/g' triangle/makefile; \
+	if [ "$(OSTYPE)" == "msys" -o "$(MSYSTEM)" == "MINGW32" ] ; then \
+		sed -i -e 's/-DLINUX/-DCPU86/g' triangle/makefile ; \
 	fi
+	sed -i -e 's/CC = cc/CC = gcc -fPIC/g' triangle/makefile; \
 	
 	make -C triangle/ trilibrary
 	rm -f lib/libtriangle.a
@@ -57,6 +54,28 @@ suitesparse: prep $(SUITESPARSE)
 		cp SuiteSparse/$$i/Lib/*.a lib/; \
 	done
 
+wget:
+	if [ "$(OSTYPE)" == "msys" -o "$(MSYSTEM)" == "MINGW32" ] ; then \
+		if ( wget --version ); then \
+			echo "########### wget found: ok" ; \
+		else \
+			echo "########### Installing wget" ; \
+			mingw-get.exe install msys-wget ; \
+		fi; \
+	fi
+	
+unzip:
+	if [ "$(OSTYPE)" == "msys" -o "$(MSYSTEM)" == "MINGW32" ] ; then \
+		if ( unzip -v ); then \
+			echo "########### unzip found: ok" ; \
+		else \
+			echo "########### Installing unzip" ; \
+			mingw-get.exe install msys-unzip ; \
+		fi; \
+	fi
+
 clean:
 	echo "Cleaning ..."
 	rm -rf lib triangle AMD CAMD COLAMD CCOLAMD LDL CHOLMOD SuiteSparse *~
+
+	
