--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -96,7 +96,8 @@ libgimli_la_SOURCES = \
 			vectortemplates.h
 
 libgimli_la_LDFLAGS= \
-	-no-undefined -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
+	-no-undefined \
+	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 	-release $(LT_RELEASE)
  
 #libgimli_la_LIBADD = ../external/lib/libtriangle.lib
